<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ce"
            style="@style/Keyboard.Button.CE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_ce" />

        <Button
            android:id="@+id/button_mc"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_mc" />

        <Button
            android:id="@+id/button_quotes"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_quotes" />

        <Button
            android:id="@+id/button_div"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_div" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_7"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_7" />

        <Button
            android:id="@+id/button_8"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_8" />

        <Button
            android:id="@+id/button_9"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_9" />

        <Button
            android:id="@+id/button_multi"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_multi" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_4"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_4" />

        <Button
            android:id="@+id/button_5"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_5" />

        <Button
            android:id="@+id/button_6"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_6" />

        <Button
            android:id="@+id/button_minus"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_minus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_1"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_1" />

        <Button
            android:id="@+id/button_2"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_2" />

        <Button
            android:id="@+id/button_3"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_3" />

        <Button
            android:id="@+id/button_plus"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_plus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_0"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_0" />

        <Button
            android:id="@+id/button_comma"
            style="@style/Keyboard.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_comma" />

        <Button
            android:id="@+id/button_equals"
            style="@style/Keyboard.Button.Equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_equals" />

    </LinearLayout>

</LinearLayout>