<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.ui.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background" />
    <!--
    Был выбран GridLayout так как данный layout представляет коллекцию элементов
     в строках и столбцах, которые можно прокручивать по вертикали.
      Данные стекаются по горизонтали, пока не заполнит столбец,
      а затем продолжается со следующей строкой в столбце.Решает проблемы выравнивания.
    -->
    <GridLayout
        android:id="@+id/grid_activity_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal"
            android:gravity="end"
            android:paddingVertical="@dimen/default_padding"
            android:text="100"
            android:textColor="@color/white"
            android:textSize="@dimen/result_size" />

        <Button
            android:id="@+id/button_ac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:backgroundTint="@color/orange_button"
            android:text="@string/key_ac" />

        <Button
            android:id="@+id/button_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:backgroundTint="@color/light_grey_button"
            android:text="@string/key_div" />

        <Button
            android:id="@+id/button_multi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:backgroundTint="@color/light_grey_button"
            android:text="@string/key_multi" />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:backgroundTint="@color/light_grey_button"
            android:text="@string/key_equals" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:backgroundTint="@color/light_grey_button"
            android:text="@string/key_minus" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:backgroundTint="@color/light_grey_button"
            android:text="@string/key_plus" />

        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_button"
            android:text="@string/key_7" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_button"
            android:text="@string/key_8" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_button"
            android:text="@string/key_9" />


        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_button"
            android:text="@string/key_4" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_button"
            android:text="@string/key_5" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_button"
            android:text="@string/key_6" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_button"
            android:text="@string/key_1" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_button"
            android:text="@string/key_2" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_button"
            android:text="@string/key_3" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:backgroundTint="@color/grey_button"
            android:text="@string/key_0" />

        <Button
            android:id="@+id/button_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:backgroundTint="@color/grey_button"
            android:text="@string/key_point" />

    </GridLayout>

</FrameLayout>